--- a/css/main.css
+++ b/css/main.css
@@ -12,11 +12,10 @@
 }
 .search-box
         {
-      float: center;
-      padding: 8px;
-      margin-top: 12px;
-      margin-right: 16px;
-      font-size: 17px;
+      position: relative;
+      margin-right: 20%;
+      margin-left: 70%;
+      font-size: 14px;
       border: none;
       cursor: pointer;
     }
@@ -29,6 +28,43 @@
      position:absolute;
      top: 29%;
      font-size: 800%;
+}
+.place_searchbox
+{
+  position: relative;
+  left: 40%;
+  max-width: 45%;
+  top: -8.9%;
+}
+form.example input[type=text] {
+  padding: 10px;
+  font-size: 17px;
+  border: 1px solid grey;
+  float: left;
+  width: 80%;
+  background: #f1f1f1;
+}
+
+form.example button {
+  float: left;
+  width: 20%;
+  padding: 10px;
+  background: #2196F3;
+  color: white;
+  font-size: 17px;
+  border: 1px solid grey;
+  border-left: none;
+  cursor: pointer;
+}
+
+form.example button:hover {
+  background: #0b7dda;
+}
+
+form.example::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 .topnav 
 {
@@ -156,7 +192,24 @@ button {
   cursor: pointer;
   width: 100%;
 }
+input[type=text] {
+  width: 130px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  background-color: white;
+  background-image: url('searchicon.png');
+  background-position: 10px 10px; 
+  background-repeat: no-repeat;
+  padding: 12px 20px 12px 40px;
+  -webkit-transition: width 0.4s ease-in-out;
+  transition: width 0.4s ease-in-out;
+}
 
+input[type=text]:focus {
+  width: 100%;
+}
 .button:hover {
   opacity: 0.8;
 }
