--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,8 @@
 {
   position: relative;
   left: 40%;
-  max-width: 45%;
+  max-width: 45
+  %;
   top: -8.9%;
 }
 form.example input[type=text] {
