--- a/css/main.css
+++ b/css/main.css
@@ -125,16 +125,17 @@ form.example::after {
 	color:red;
     font-size:45px;
     cursor:pointer;
-}
+}/*
 .footer
 {
      background-color:aqua;
       opacity:80%;
-}
+}*/
 .margin
 {
 	margin-left:10px;
 }
+/*
 .footer 
 {
   position: relative;
@@ -144,6 +145,20 @@ form.example::after {
   background-color: #a9bfbf;
   color: white;
   text-align: center;
+}*/
+.universal_footer
+{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  height: 30%;
+  background-color: aquamarine;
+
+}
+.footer_text
+{
+  float: left;
+  font-size: 5px;
 }
 .H1_font
 {
@@ -163,6 +178,18 @@ form.example::after {
   color: white;
   position: relative;
   top: 15%;
+}
+.h2_red_size_mid_large_center
+{
+  
+  font-size:200% ; 
+  color: red ;
+
+}
+.h2_red_size_mid_large_center:hover
+{
+  font-size: 210%;
+  color: #0346BB;
 }
 .about_bg_image_
 {
