--- a/css/main.css
+++ b/css/main.css
@@ -149,7 +149,7 @@ form.example::after {
 .universal_footer
 {
   width: 100%;
-  height: 100%;
+  height: auto;
   position: relative;
   height: 30%;
   background-color: aquamarine;
@@ -184,6 +184,8 @@ form.example::after {
   
   font-size:200% ; 
   color: red ;
+  border: black;
+  border-block-width: 2px;
 
 }
 .h2_red_size_mid_large_center:hover
